# master_thesis_hci_robotics_june_2019

./: README.md
golf_platform/meshes/: platform_golf_r2.STL  platform_golf_r4.STL  platform_golf_r5.STL  platform_golf_r6.STL  platform_golf_r7.STL  platform_golf_r8.STL
golf_platform/meshes/Platform_golf_r02.SLDPRT/: manifest.xml
golf_platform/urdf/: golf_platform.sdf
modman_comm/: CMakeLists.txt  package.xml
modman_comm/include/modman_comm/: modman_comm.h
modman_comm/launch/: client.launch  modman_comm.launch  modman_vision.launch  server.launch  ur_comm.launch
modman_comm/src/: client.cpp  modman_comm.cpp  server.cpp  ur_comm.cpp  ur_test.cpp
modman_msgs/: CMakeLists.txt  package.xml
modman_msgs/msg/: modman_state.msg
opencv_object_tracking/: CMakeLists.txt  package.xml
opencv_object_tracking/msg/: position_publish.msg
opencv_object_tracking/src/: object_filter.cpp
puck_sim/: CMakeLists.txt  manifest.xml
puck_sim/examples/: example.cpp
puck_sim/include/puck_sim/: myPngfile.h  mySim.h
puck_sim/launch/: example.launch
puck_sim2/: CMakeLists.txt  package.xml
puck_sim2/include/puck_sim2/: mySim.h
puck_sim2/launch/: example.launch
puck_sim2/src/: example.cpp  puck_sim_server.cpp
puck_sim2/srv/: puck_sim.srv
universal_robot/ur_description/urdf/: common.gazebo.xacro
universal_robot/ur_kinematics/src/: ur_kin.cpp  ur_kin.i  ur_kin_wrap.cxx
ur_gazebo_test2/: CMakeLists.txt  package.xml
ur_gazebo_test2/experiment/: Huong_train.py  actor_critic_alg_r0_20190417.py  config.py  play.py  play_modman.py  train.py
ur_gazebo_test2/launch/: modman.launch  ur5_golf_play.launch  ur5_slide.launch
ur_gazebo_test2/scripts/: csv_pratice.py  ddpg_ur5_20190416.py  gazebo_cartpole_v1.py  gazebo_connection.py  plot_controller.py  q_learning.py  q_learning_20190503.py  q_learning_20190503_1.py  q_learning_20190503_2.py  robot_gazebo_env.py  setup.py  slide_puck.py  slide_puck_vision.py  slide_test.py  slide_test_vision.py  start_qlearning.py  universal_robot_kinematics.py  ur5_env.py
ur_gazebo_test2/stl/: Base.stl  BigTypeA.stl  BigTypeB.stl  Link2_6dof_Assy.stl  Link5_6dof_Assy.stl  MedTypeA.stl  MedTypeB.stl  SMTypeA.stl  SMTypeB.stl  Torso.stl  dummy.stl
ur_gazebo_test2/urdf/: golf_ball_object.sdf  golf_ball_target.sdf  modman.urdf  object.sdf  object.urdf  target.sdf  ur5.sdf  visual_object.sdf
(+36 files in other folders)
