<?xml version="1.0"?>
<package>
  <name>modman_comm</name>
  <version>0.1.0</version>
  <description>Communication to ModMan and vision system</description>
  <license>TODO</license>
  <maintainer email="kim.soonkyum@kist.re.kr">skkim</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
<!--  <build_depend>find_object_2d</build_depend>-->
  <build_depend>opencv_object_tracking</build_depend>
  <build_depend>message_generation</build_depend>
<!--  <build_depend>modman_msgs</build_depend> -->

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
<!--  <run_depend>find_object_2d</run_depend>-->
  <run_depend>opencv_object_tracking</run_depend>
  <run_depend>message_runtime</run_depend>
<!--  <run_depend>modman_msgs</run_depend> -->
</package>
